<resources>
    <string name="app_name">MrLawer</string>
    <string name="welcome">Welcome to Mr.Lawer</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="finish">Finish</string>
    <string name="register_success">Register success</string>
    <string name="register_failure">Register failure</string>
    <string name="login_success">Login success</string>
    <string name="login_failure">Login failure</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="password_not_same">Password not same</string>
    <string name="logout">Logout</string>
    <string name="login_failure_no_account">The account you input is nonexistent</string>
    <string name="password_wrong">Wrong password</string>
    <string name="gender">Gender</string>
    <string name="city">City</string>
    <string name="age">Age</string>
</resources>
